fixes menu items alignment

--- a/_sass/steve/_layout.scss
+++ b/_sass/steve/_layout.scss
@@ -76,7 +76,7 @@ body {
 }
 
 .menu-item {
-  flex: 1 0 auto;
+  flex: 0 0 auto;
   color: rgba(255, 255, 255, 0.7);
   background-color: var(--color-link);
   border-radius: 1.5rem;
